--- a/package.json
+++ b/package.json
@@ -43,15 +43,15 @@
     "@types/stripe": "^6.19.4",
     "@types/superagent": "^3.8.6",
     "@types/uuid": "^3.4.4",
-    "aws-sdk": "^2.395.0",
+    "aws-sdk": "2.344.0",
     "babel-loader": "^8.0.5",
     "bankers-rounding": "^0.1.3",
     "cassava": "^2.4.1",
     "chai": "^4.2.0",
     "chai-exclude": "^1.0.12",
+    "chai-match": "^1.1.1",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^6.2.0",
-    "dynameh": "^2.10.3",
     "file-loader": "^3.0.1",
     "giftbit-cassava-routes": "git+ssh://git@github.com/Giftbit/giftbit-cassava-routes.git#semver:^10.1.1",
     "giftbit-lambda-metricslib": "git+ssh://git@github.com/Giftbit/giftbit-lambda-metricslib.git#semver:^3.0.0",
@@ -78,8 +78,5 @@
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "zip-webpack-plugin": "^3.0.0"
-  },
-  "devDependencies": {
-    "chai-match": "^1.1.1"
   }
 }
