--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "POC banking implementation",
   "scripts": {
-    "build": "webpack",
+    "build": "node --max_old_space_size=2048 node_modules/.bin/webpack",
     "clean": "rimraf ./dist",
     "lint": "tslint --project tsconfig.json",
     "schema": "npm run test:startdb; TEST_ENV=true DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost ts-node -e 'import {getDbSchema} from \"./src/utils/dbUtils/getDbSchema\"; import {resetDb} from \"./src/utils/testUtils\"; resetDb().then(() => getDbSchema()).then(s => {console.log(s); process.exit(0)});'; npm run test:stopdb",
@@ -43,7 +43,7 @@
     "@types/stripe": "^6.19.4",
     "@types/superagent": "^3.8.6",
     "@types/uuid": "^3.4.4",
-    "aws-sdk": "2.344.0",
+    "aws-sdk": "^2.395.0",
     "babel-loader": "^8.0.5",
     "bankers-rounding": "^0.1.3",
     "cassava": "^2.4.1",
@@ -73,7 +73,7 @@
     "ts-loader": "^5.3.3",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
-    "typescript": "^3.2.4",
+    "typescript": "^3.3.0",
     "uuid": "^3.3.2",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
