--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "chai-match": "^1.1.1",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^6.2.0",
+    "dotenv-safe": "^6.1.0",
     "file-loader": "^3.0.1",
     "giftbit-cassava-routes": "git+ssh://git@github.com/Giftbit/giftbit-cassava-routes.git#semver:^10.1.1",
     "giftbit-lambda-metricslib": "git+ssh://git@github.com/Giftbit/giftbit-lambda-metricslib.git#semver:^3.0.0",
