Use string values for performance schema params
Also set params to 'off' values for non-production environments. This means that non-production deploys will fail if the parameter name or syntax is wrong.

--- a/infrastructure/sam.yaml
+++ b/infrastructure/sam.yaml
@@ -328,8 +328,8 @@ Resources:
       Parameters:
         sql_mode: IGNORE_SPACE,STRICT_TRANS_TABLES
         slow_query_log: 1
-        performance_schema: !If [HighCapacity, 1, !Ref "AWS::NoValue"]
-        performance-schema-consumer-events-waits-current: !If [HighCapacity, ON, !Ref "AWS::NoValue"]
+        performance_schema: !If [HighCapacity, 1, 0]
+        performance-schema-consumer-events-waits-current: !If [HighCapacity, "ON", "OFF"]
         performance-schema-instrument: !If [HighCapacity, 'wait/%=ON', !Ref "AWS::NoValue"]
       Tags:
         - Key: Service
