--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "internal-rothschild",
   "version": "1.0.0",
-  "description": "POC banking implementation",
+  "description": "Banking implementation",
   "scripts": {
     "build": "node --max_old_space_size=3072 node_modules/.bin/webpack",
     "clean": "rimraf ./dist",
     "lint": "tslint --project tsconfig.json",
     "schema": "npm run test:startdb; TEST_ENV=true DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost ts-node -e 'import {getDbSchema} from \"./src/utils/dbUtils/getDbSchema\"; import {resetDb} from \"./src/utils/testUtils\"; resetDb().then(() => getDbSchema()).then(s => {console.log(s); process.exit(0)});'; npm run test:stopdb",
-    "test": "npm run test:startdb; TEST_ENV=true TEST_STRIPE_LOCAL=true DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost mocha --recursive --timeout 5000 --require ts-node/register --require ./src/utils/testUtils/setLogLevelSilent.ts --require ./src/utils/testUtils/dotEnvSafe.ts --require stripe-stateful-mock --exit \"src/**/*.test.ts\"; npm run test:stopdb",
-    "test:debug": "npm run test:startdb; TEST_ENV=true TEST_STRIPE_LOCAL=true LOG_LEVEL=debug DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost mocha --recursive --timeout 5000 --require ts-node/register --require ./src/utils/testUtils/setLogLevelDebug.ts --require ./src/utils/testUtils/dotEnvSafe.ts --require stripe-stateful-mock --exit \"src/**/*.test.ts\"; npm run test:stopdb",
-    "test:stripeLive": "npm run test:startdb; TEST_ENV=true DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost mocha --recursive --timeout 5000 --require ts-node/register --require ./src/utils/testUtils/setLogLevelSilent.ts --require ./src/utils/testUtils/dotEnvSafe.ts --exit \"src/**/*.test.ts\"; npm run test:stopdb",
-    "test:stripeLive:debug": "npm run test:startdb; TEST_ENV=true DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost mocha --recursive --timeout 5000 --require ts-node/register --require ./src/utils/testUtils/setLogLevelDebug.ts --require ./src/utils/testUtils/dotEnvSafe.ts --exit \"src/**/*.test.ts\"; npm run test:stopdb",
+    "test": "npm run test:startdb; TEST_ENV=true TEST_STRIPE_LOCAL=${TEST_STRIPE_LOCAL:=true} LOG_LEVEL=${LOG_LEVEL:=silent} DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost mocha --recursive --timeout 5000 --require ts-node/register --require ./src/utils/testUtils/setLogLevel.ts --require ./src/utils/testUtils/dotEnvSafe.ts --require stripe-stateful-mock --exit \"src/**/*.test.ts\"; npm run test:stopdb",
+    "test:debug": "LOG_LEVEL=debug npm run test",
+    "test:stripeLive": "TEST_STRIPE_LOCAL=false npm run test",
+    "test:stripeLiveDebug": "TEST_STRIPE_LOCAL=false npm run test:debug",
     "test:startdb": "docker start rothschild-test-mysql || (docker run --name rothschild-test-mysql -e MYSQL_ROOT_PASSWORD=testpass -p 3306:3306 --health-cmd='mysqladmin ping --silent' -d mysql:5.6 mysqld --innodb-strict-mode=ON --sql_mode=IGNORE_SPACE,STRICT_TRANS_TABLES && until [ `docker inspect --format '{{.State.Health.Status}}' rothschild-test-mysql` = \"healthy\" ]; do echo 'waiting for MySQL to become healthy' && sleep 1; done)",
     "test:stopdb": "docker stop rothschild-test-mysql"
   },
