--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf ./dist",
     "lint": "tslint --project tsconfig.json",
     "schema": "npm run test:startdb; TEST_ENV=true DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost ts-node -e 'import {getDbSchema} from \"./src/utils/dbUtils/getDbSchema\"; import {resetDb} from \"./src/utils/testUtils\"; resetDb().then(() => getDbSchema()).then(s => {console.log(s); process.exit(0)});'; npm run test:stopdb",
-    "test": "npm run test:startdb; TEST_ENV=true TEST_STRIPE_LOCAL=${TEST_STRIPE_LOCAL:=true} LOG_LEVEL=${LOG_LEVEL:=silent} DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost mocha --recursive --timeout 5000 --require ts-node/register --require ./src/utils/testUtils/setLogLevel.ts --require ./src/utils/testUtils/dotEnvSafe.ts --require stripe-stateful-mock --exit \"src/**/*.test.ts\"; npm run test:stopdb",
+    "test": "npm run test:startdb; TEST_ENV=true TEST_STRIPE_LOCAL=${TEST_STRIPE_LOCAL:=true} LOG_LEVEL=${LOG_LEVEL:=silent} DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost mocha --recursive --timeout 5000 --require ts-node/register --require ./src/utils/testUtils/setLogLevel.ts --require ./src/utils/testUtils/dotEnvSafe.ts --require stripe-stateful-mock/autostart --exit \"src/**/*.test.ts\"; npm run test:stopdb",
     "test:debug": "LOG_LEVEL=trace npm run test",
     "test:stripeLive": "TEST_STRIPE_LOCAL=false npm run test",
     "test:stripeLiveDebug": "TEST_STRIPE_LOCAL=false npm run test:debug",
@@ -70,7 +70,7 @@
     "rimraf": "^3.0.0",
     "sinon": "^7.5.0",
     "stripe": "^7.11.0",
-    "stripe-stateful-mock": "0.0.11",
+    "stripe-stateful-mock": "0.0.12",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
