Switch postDeploy runtime back to Node 8.10
Short term workaround: the node10 runtime is missing a number of fundamental things that the postDeploy function needs in order to use flyway to run migrations (curl, tar, java).

--- a/infrastructure/sam.yaml
+++ b/infrastructure/sam.yaml
@@ -688,7 +688,7 @@ Resources:
     Properties:
       CodeUri: ../dist/postDeploy/postDeploy.zip
       Handler: index.handler
-      Runtime: nodejs10.x
+      Runtime: nodejs8.10
       MemorySize: 256
       Timeout: 900 # seconds, 900 max
       Environment:
