--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "lint": "tslint --project tsconfig.json",
     "schema": "npm run test:startdb; TEST_ENV=true DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost ts-node -e 'import {getDbSchema} from \"./src/utils/dbUtils/getDbSchema\"; import {resetDb} from \"./src/utils/testUtils\"; resetDb().then(() => getDbSchema()).then(s => {console.log(s); process.exit(0)});'; npm run test:stopdb",
     "test": "npm run test:startdb; TEST_ENV=true TEST_STRIPE_LOCAL=${TEST_STRIPE_LOCAL:=true} LOG_LEVEL=${LOG_LEVEL:=silent} DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost mocha --recursive --timeout 5000 --require ts-node/register --require ./src/utils/testUtils/setLogLevel.ts --require ./src/utils/testUtils/dotEnvSafe.ts --require stripe-stateful-mock/autostart --exit \"src/**/*.test.ts\"; npm run test:stopdb",
+    "test:nodb": "TEST_ENV=true TEST_STRIPE_LOCAL=${TEST_STRIPE_LOCAL:=true} LOG_LEVEL=${LOG_LEVEL:=silent} DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost mocha --recursive --timeout 5000 --require ts-node/register --require ./src/utils/testUtils/setLogLevel.ts --require ./src/utils/testUtils/dotEnvSafe.ts --require stripe-stateful-mock/autostart --exit \"src/**/*.test.ts\"",
     "test:debug": "LOG_LEVEL=trace npm run test",
     "test:stripeLive": "TEST_STRIPE_LOCAL=false npm run test",
     "test:stripeLiveDebug": "TEST_STRIPE_LOCAL=false npm run test:debug",
-    "test:startdb": "docker start rothschild-test-mysql || (docker run --name rothschild-test-mysql -e MYSQL_ROOT_PASSWORD=testpass -p 3306:3306 --health-cmd='mysqladmin ping --silent' -d mysql:5.6 mysqld --innodb-strict-mode=ON --sql_mode=IGNORE_SPACE,STRICT_TRANS_TABLES && until [ `docker inspect --format '{{.State.Health.Status}}' rothschild-test-mysql` = \"healthy\" ]; do echo 'waiting for MySQL to become healthy' && sleep 1; done)",
+    "test:startdb": "docker start rothschild-test-mysql || (docker run --name rothschild-test-mysql -e MYSQL_ROOT_PASSWORD=testpass -p 3306:3306 --health-cmd='mysqladmin ping --silent' -d mysql:5.6 mysqld --innodb-strict-mode=ON --sql_mode=IGNORE_SPACE,STRICT_TRANS_TABLES --server_id=1 --log-bin=bin.log --log-bin-index=bin-log.index --binlog_format=row && until [ `docker inspect --format '{{.State.Health.Status}}' rothschild-test-mysql` = \"healthy\" ]; do echo 'waiting for MySQL to become healthy' && sleep 1; done)",
     "test:stopdb": "docker stop rothschild-test-mysql"
   },
   "repository": {
@@ -35,6 +36,7 @@
     "@types/knex": "^0.16.1",
     "@types/loglevel": "^1.6.3",
     "@types/mocha": "^5.2.7",
+    "@types/mysql": "^2.15.8",
     "@types/node": "^10.17.5",
     "@types/papaparse": "^5.0.1",
     "@types/parse-link-header": "^1.0.0",
@@ -78,6 +80,7 @@
     "uuid": "^3.3.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
-    "zip-webpack-plugin": "^3.0.0"
+    "zip-webpack-plugin": "^3.0.0",
+    "zongji": "^0.5.1"
   }
 }
