--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:stripeLive": "TEST_STRIPE_LOCAL=false npm run test",
     "test:stripeLiveDebug": "TEST_STRIPE_LOCAL=false npm run test:debug",
     "test:startdb": "docker start rothschild-test-mysql || (docker run --name rothschild-test-mysql -e MYSQL_ROOT_PASSWORD=testpass -p 3306:3306 --health-cmd='mysqladmin ping --silent' -d mysql:5.6 mysqld --innodb-strict-mode=ON --sql_mode=IGNORE_SPACE,STRICT_TRANS_TABLES && until [ `docker inspect --format '{{.State.Health.Status}}' rothschild-test-mysql` = \"healthy\" ]; do echo 'waiting for MySQL to become healthy' && sleep 1; done)",
+    "test:resetdb": "TEST_ENV=true DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost ts-node -e 'import {resetDb} from \"./src/utils/testUtils\"; resetDb().then(s => {console.log(s); process.exit(0)});'",
     "test:stopdb": "docker stop rothschild-test-mysql"
   },
   "repository": {
