Fix merge and increase CI permissions to create Dynamo table.

--- a/infrastructure/ci.yaml
+++ b/infrastructure/ci.yaml
@@ -422,7 +422,7 @@ Resources:
           - Effect: Allow
             Action:
               - application-autoscaling:*
-            Resource: *
+            Resource: "*"
           # S3
 #          - Effect: Allow
 #            Action:
