--- a/infrastructure/sam.yaml
+++ b/infrastructure/sam.yaml
@@ -804,6 +804,7 @@ Resources:
           LIGHTRAIL_EVENT_TOPIC_ARN: !Ref LightrailEventTopicArn
           READ_REPLICA_SERVER_ID: 1234
           SECURE_CONFIG_BUCKET: !Ref SecureConfigBucket
+          SECURE_CONFIG_KEY_CODE_CRYTPOGRAPHY: code_cryptography_secrets.json
           SECURE_CONFIG_KEY_SENTRY: sentry_lambda_services.json
       VpcConfig:
         SecurityGroupIds:
@@ -832,6 +833,7 @@ Resources:
               Action:
                 - s3:GetObject
               Resource:
+                - !Sub "arn:aws:s3:::${SecureConfigBucket}/code_cryptography_secrets.json"
                 - !Sub "arn:aws:s3:::${SecureConfigBucket}/sentry_lambda_services.json"
             - Effect: Allow
               Action:
