Accomodate the LightrailEventEncryptionKeyArn.

--- a/infrastructure/sam.yaml
+++ b/infrastructure/sam.yaml
@@ -28,6 +28,10 @@ Parameters:
     Description: Optional ARN of the SNS topic on Lightrail Events
     AllowedPattern: (arn:aws:sns:[a-zA-Z_0-9\-]+:\d{12}:[a-zA-Z_0-9+=,.@\-_/]+)?
     Default: ""
+  LightrailEventEncryptionKeyArn:
+    Type: String
+    Description: Optional ARN of the KMS key encrypting Lightrail Events
+    AllowedPattern: (arn:aws:kms:[a-z0-9-]+:\d{12}:key/[a-z0-9-]+)?
   SecureConfigBucket:
     Type: String
     Description: Name of the S3 bucket holding the JWT secure config
@@ -501,6 +505,14 @@ Resources:
                 - kms:DescribeKey
               Resource:
                 - !Sub "arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/${DbEncryptionKeyId}"
+            - Effect: Allow
+              Action:
+                - kms:Decrypt
+                - kms:DescribeKey
+                - kms:Encrypt
+                - kms:GenerateDataKey*
+              Resource:
+                - !Ref LightrailEventEncryptionKeyArn
             - Effect: Allow
               Action:
                 - s3:GetObject
