--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/sinon": "^7.5.0",
     "@types/stripe": "^7.13.3",
     "@types/superagent": "^4.1.4",
+    "@types/tar": "^4.0.3",
     "@types/uuid": "^3.4.6",
     "aws-sdk": "^2.571.0",
     "babel-loader": "^8.0.6",
@@ -73,6 +74,7 @@
     "sinon": "^7.5.0",
     "stripe": "^7.13.0",
     "stripe-stateful-mock": "0.0.12",
+    "tar": "^6.0.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.5.0",
     "tslint": "^5.20.1",
