WIP migrating over to eslint.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "node --max_old_space_size=4096 node_modules/.bin/webpack",
     "clean": "rimraf ./dist",
-    "lint": "tslint --project tsconfig.json",
+    "lint": "eslint . --ext .ts,.tsx",
     "schema": "npm run test:startdb; TEST_ENV=true DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost ts-node -e 'import {getDbSchema} from \"./src/utils/dbUtils/getDbSchema\"; import {resetDb} from \"./src/utils/testUtils\"; resetDb().then(() => getDbSchema()).then(s => {console.log(s); process.exit(0)});'; npm run test:stopdb",
     "test": "npm run test:startdb; TEST_ENV=true TEST_STRIPE_LOCAL=${TEST_STRIPE_LOCAL:=true} LOG_LEVEL=${LOG_LEVEL:=silent} DB_USERNAME=root DB_PASSWORD=testpass DB_PORT=3306 DB_ENDPOINT=localhost DB_READ_ENDPOINT=localhost mocha --recursive --timeout 5000 --require ts-node/register --require ./src/utils/testUtils/setLogLevel.ts --require ./src/utils/testUtils/dotEnvSafe.ts --require stripe-stateful-mock/autostart --exit \"src/**/*.test.ts\"; npm run test:stopdb",
     "test:debug": "LOG_LEVEL=trace npm run test",
@@ -45,6 +45,8 @@
     "@types/superagent": "^4.1.4",
     "@types/tar": "^4.0.3",
     "@types/uuid": "^7.0.3",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
     "aws-sdk": "^2.706.0",
     "babel-loader": "^8.1.0",
     "bankers-rounding": "^0.1.3",
@@ -55,6 +57,7 @@
     "crypto-js": "^3.1.9-1",
     "dotenv-safe": "^8.2.0",
     "dynameh": "^4.3.1",
+    "eslint": "^7.3.1",
     "file-loader": "^6.0.0",
     "giftbit-cassava-routes": "git+ssh://git@github.com/Giftbit/giftbit-cassava-routes.git#semver:^11.0.0",
     "giftbit-lambda-metricslib": "git+ssh://git@github.com/Giftbit/giftbit-lambda-metricslib.git#semver:^3.0.0",
@@ -77,7 +80,6 @@
     "tar": "^6.0.2",
     "ts-loader": "^7.0.5",
     "ts-node": "^8.10.2",
-    "tslint": "^5.20.1",
     "typescript": "^3.9.5",
     "uuid": "^8.2.0",
     "webpack": "^4.43.0",
