Open source as Apache-2.0.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "NONE",
+  "license": "Apache-2.0",
   "private": true,
   "bugs": {
     "url": "https://github.com/Giftbit/internal-rothschild/issues"
